--- a/Todo.txt
+++ b/Todo.txt
@@ -1,9 +1,9 @@
 TO DO
--- Create findByKeyword(any of the entity fields) query for everything
+
 -- Add cross to 'clean' search instead of clean button
 -- Create Customer profile view
 -- loan-list should redirect to customer profile when clicking on his/her name
--- Protect loans route for admin and user
+-- Protect loans route for admin and user : when a user is logged in, only show his/her own loans
 -- In loan-list view, instead of 'New' button, render loan details if role equals USER
 -- Customer can only have one loan(in customer view with role USER, new loan must change view current loan)
 -- Implement delete button for everything (protect route -only for admin-)
@@ -12,7 +12,7 @@ TO DO
 -- Load profile pic (user -save URL-)
 -- Sort tables
 -- change date format in loan view (only what's rendered)
-
+-- in loan-list, replace 'Realizar Préstamo' with 'Ver Préstamo'
 
 BUGS
 
@@ -34,6 +34,7 @@ DONE
 -- When creating a new loan from customers view, it says "pick a customer and try again", check form and controller(FIXED -> passed back customerId from exception control)
 -- When a loan is made, books included must change their copies, loaned and available display
 - If customer already found in Loans, reject the loan
+-- Create findByKeyword(any of the entity fields) query for everything
 
 ISSUES
 
